<resources>
    <string name="app_name">SE</string>
    <string name="tadm">TADM</string>
    <string name="new_entry">New Entry</string>
    <string name="search">Search</string>
    <string name="existing_dera">Existing Dera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_details">Basic Details</string>
    <string name="family_details">Family Details</string>
    <string name="dera_details">Dera Details</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="person">person</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">Name*</string>
    <string name="religion">Religion</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="father_name">Father Name</string>
    <string name="address">Address</string>
    <string name="marital_status">Marital Status</string>
    <string name="place_vist_last_year">Place Vist Last Year</string>
    <string name="route_use">Route Use</string>
    <string name="duration">Duration</string>
    <string name="age">Age</string>
    <string name="aadhar_no">Aadhar No</string>
    <string name="relation">Relation</string>
    <string name="add">Add</string>
    <string name="sheep">Sheep</string>
    <string name="ox">Ox</string>
    <string name="cow">Cow</string>
    <string name="bull">Bull</string>
    <string name="horse">Horse</string>
    <string name="dog">Dog</string>
    <string name="goat">Goat</string>
    <string name="camera">camera</string>
    <string name="gender">Gender</string>
    <string name="id">ID*</string>
    <string name="search_category">Search Category</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_proceed">are you sure you want to proceed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="loading">Loading...</string>
    <string name="coming_from">Coming From</string>
    <string name="date_of_registration">Date of Registration</string>
    <string name="sohang_education">Sohang Education</string>
    <string name="delete">Delete</string>
    <string name="deras">DeRas</string>
</resources>