<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/custom_confirm_dialog.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_green"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/dialogMessage"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_proceed"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnYes"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"

            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </LinearLayout>
</LinearLayout>
