<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/input_box_layout"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/img"
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:src="@drawable/baseline_person"
            android:contentDescription="@string/person"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/cameraBtn"
                android:layout_width="50dp"
                android:layout_height="48dp"

                android:background="@drawable/circle_background"
                android:src="@drawable/baseline_camera_alt_24"
                android:padding="8dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/camera"
                android:scaleType="fitCenter"
                />
            <ImageButton
                android:id="@+id/addPhotoBtn2"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_background"
                android:src="@drawable/baseline_upload_file_24"
                android:padding="8dp"
                android:contentDescription="@string/camera"
                android:scaleType="fitCenter"
                />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="#555"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="3"
                android:textColorHint="#555"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genderTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:paddingVertical="17dp"
                android:paddingHorizontal="13dp"
                android:importantForAutofill="no"
                android:textColorHint="#555"
                android:textSize="15sp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RelationTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/relation"
                android:importantForAutofill="no"
                android:inputType="text"

                android:textColorHint="#555"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aadharTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aadhar_no"
                android:importantForAutofill="no"
                android:inputType="number"

                android:textColorHint="#555"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                android:importantForAutofill="no"
                android:inputType="number"

                android:textColorHint="#555"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:layout_width="wrap_content"-->
<!--        android:id="@+id/deletebtn"-->
<!--        android:layout_gravity="end"-->
<!--        android:text="@string/delete"-->
<!--    -->
<!--      -->
<!--        android:layout_marginEnd="15dp"-->
<!--        android:layout_height="match_parent"/>-->
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"

            android:background="@color/green"

            android:layout_marginVertical="10dp"

            />
    </LinearLayout>
