<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".BasicDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewWithBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/dark_green"
            android:text="@string/basic_details"
            android:paddingVertical="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/textViewWithBorder"
            android:background="@color/green" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <ImageView
                android:id="@+id/img"
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:layout_gravity="center"

                android:paddingTop="5dp"
                android:src="@drawable/baseline_person"
                android:contentDescription="@string/person"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cameraBtn"
                    android:layout_width="50dp"
                    android:layout_height="48dp"

                    android:background="@drawable/circle_background"
                android:src="@drawable/baseline_camera_alt_24"
                android:padding="8dp"
                    android:layout_marginEnd="20dp"
                android:contentDescription="@string/camera"
                android:scaleType="fitCenter"
                />
                <ImageButton
                android:id="@+id/addPhotoBtn"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_background"
                android:src="@drawable/baseline_upload_file_24"
                android:padding="8dp"
                android:contentDescription="@string/camera"
                android:scaleType="fitCenter"
                />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    android:clickable="false"
                    android:focusable="false"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#555"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#555"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fnameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#555"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">


                <AutoCompleteTextView
                    android:id="@+id/addressTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:paddingVertical="17dp"
                    android:paddingHorizontal="13dp"
                    android:importantForAutofill="no"
                    android:textColorHint="#555"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/religionTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/religion"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#546E7A"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/msTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marital_status"
                    android:paddingVertical="17dp"
                    android:paddingHorizontal="13dp"
                    android:importantForAutofill="no"
                    android:textColorHint="#555"
                    android:textSize="15sp"
                     />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="#546E7A"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/detnationTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Destination"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#546E7A"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/durationTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/duration"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#546E7A"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/route_use"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="#546E7A"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pvlyTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place_vist_last_year"
                    android:importantForAutofill="no"
                    android:inputType="date"

                    android:focusable="false"
                    android:textColorHint="#546E7A"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>